hive as local data source

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smart_to_do
 description: "Smart TODO Flutter App"
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -11,8 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
   provider: ^6.1.4
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.8
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +22,9 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
 
-flutter:
+  build_runner: any
+  hive_generator: any
 
+flutter:
   uses-material-design: true
 
