--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.8
+  flutter_local_notifications: ^19.0.0
 
 dev_dependencies:
   flutter_test:
